src/test/samples/validSamples/validSample.pcss
/*#region FirstRegion*/
body {
  background-color: #f0f0f0;
}
/*#endregion*/

/**   #region Second Region **/
.container {
  /*  #region    InnerRegion   */
  display: flex;
  /*** #endregion   ends InnerRegion   **/

  /* #region */
  padding: 20px;
  /* #endregion */
}
/* #endregion**/
